--- a/XamarinIoTShared/XamarinIoTShared/XamarinIoTShared.UWP/XamarinIoTShared.UWP.csproj
+++ b/XamarinIoTShared/XamarinIoTShared/XamarinIoTShared.UWP/XamarinIoTShared.UWP.csproj
@@ -151,6 +151,7 @@
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
   <Import Project="..\XamarinIoTShared\XamarinIoTShared.projitems" Label="Shared" Condition="Exists('..\XamarinIoTShared\XamarinIoTShared.projitems')" />
+  <Import Project="..\..\..\Settings\Settings\Settings.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
