--- a/XamarinIoTPCL/XamarinIoTPCL/XamarinIoTPCL.Android/packages.config
+++ b/XamarinIoTPCL/XamarinIoTPCL/XamarinIoTPCL.Android/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.Amqp" version="2.1.2" targetFramework="monoandroid71" />
+  <package id="System.Net.WebSockets.Client" version="4.0.0" targetFramework="monoandroid71" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
