--- a/XamarinIoTShared/XamarinIoTShared/XamarinIoTShared.Android/app.config
+++ b/XamarinIoTShared/XamarinIoTShared/XamarinIoTShared.Android/app.config
@@ -7,6 +7,10 @@
         <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
+        <assemblyIdentity name="Microsoft.WindowsAzure.Storage" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.6.0.0" newVersion="8.6.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="DotNetty.Transport" publicKeyToken="bc13ca065fa06c29" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-0.4.7.0" newVersion="0.4.7.0" />
       </dependentAssembly>
@@ -19,16 +23,24 @@
         <bindingRedirect oldVersion="0.0.0.0-0.4.7.0" newVersion="0.4.7.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="DotNetty.Codecs.Mqtt" publicKeyToken="bc13ca065fa06c29" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-0.4.7.0" newVersion="0.4.7.0" />
-      </dependentAssembly>
-      <dependentAssembly>
         <assemblyIdentity name="DotNetty.Handlers" publicKeyToken="bc13ca065fa06c29" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-0.4.7.0" newVersion="0.4.7.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.WindowsAzure.Storage" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.5.0.0" newVersion="8.5.0.0" />
+        <assemblyIdentity name="DotNetty.Codecs.Mqtt" publicKeyToken="bc13ca065fa06c29" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.4.7.0" newVersion="0.4.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="PCLCrypto" publicKeyToken="d4421c8a4786956c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Azure.Amqp" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DotNetty.Codecs" publicKeyToken="bc13ca065fa06c29" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.4.7.0" newVersion="0.4.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
