--- a/XamarinIoTStandard/XamarinIoTStandard.Shared/XamarinIoTStandard.Shared.csproj
+++ b/XamarinIoTStandard/XamarinIoTStandard.Shared/XamarinIoTStandard.Shared.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="DotNetty.Transport" Version="0.4.7" />
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.5.2" />
     <PackageReference Include="Microsoft.Azure.Devices.Shared" Version="1.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Xamarin.Forms" Version="2.4.0.74863" />
   </ItemGroup>
 
