--- a/XamarinIoTStandard/XamarinIoTStandard/XamarinIoTStandard.UWP/project.json
+++ b/XamarinIoTStandard/XamarinIoTStandard/XamarinIoTStandard.UWP/project.json
@@ -6,6 +6,7 @@
     "Microsoft.Azure.Devices.Client": "1.5.2",
     "Microsoft.Azure.Devices.Shared": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "6.0.1",
+    "Newtonsoft.Json": "10.0.3",
     "Xamarin.Forms": "2.4.0.74863"
   },
   "frameworks": {
