--- a/XamarinIoTStandard/XamarinIoTStandard/XamarinIoTStandard.iOS/packages.config
+++ b/XamarinIoTStandard/XamarinIoTStandard/XamarinIoTStandard.iOS/packages.config
@@ -8,6 +8,7 @@
   <package id="DotNetty.Transport" version="0.4.7" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.Devices.Client" version="1.5.2" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.Devices.Shared" version="1.1.1" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="xamarinios10" />
   <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="xamarinios10" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="xamarinios10" />
@@ -16,7 +17,7 @@
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="xamarinios10" />
   <package id="PCLCrypto" version="2.0.147" targetFramework="xamarinios10" />
   <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="xamarinios10" />
   <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="xamarinios10" />
@@ -26,6 +27,7 @@
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Console" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="xamarinios10" />
@@ -61,6 +63,8 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="xamarinios10" />
@@ -74,6 +78,7 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Validation" version="2.2.8" targetFramework="xamarinios10" />
   <package id="WindowsAzure.Storage" version="8.5.0" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.4.0.74863" targetFramework="xamarinios10" />
