--- a/XamarinIoTShared/XamarinIoTShared/XamarinIoTShared.iOS/packages.config
+++ b/XamarinIoTShared/XamarinIoTShared/XamarinIoTShared.iOS/packages.config
@@ -1,8 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetty.Buffers" version="0.4.7" targetFramework="xamarinios10" />
+  <package id="DotNetty.Codecs" version="0.4.7" targetFramework="xamarinios10" />
+  <package id="DotNetty.Codecs.Mqtt" version="0.4.7" targetFramework="xamarinios10" />
+  <package id="DotNetty.Common" version="0.4.7" targetFramework="xamarinios10" />
+  <package id="DotNetty.Transport" version="0.4.7" targetFramework="xamarinios10" />
+  <package id="Microsoft.Azure.Amqp" version="2.1.2" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.Devices.Client" version="1.6.0-preview-001" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.Devices.Shared" version="1.2.0-preview-001" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.Logging" version="1.1.1" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
@@ -15,9 +24,12 @@
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.ComponentModel" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Console" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Globalization" version="4.3.0" targetFramework="xamarinios10" />
@@ -30,14 +42,19 @@
   <package id="System.Linq" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Http" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.NameResolution" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.NetworkInformation" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.WebSockets.Client" version="4.0.0" targetFramework="xamarinios10" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinios10" />
@@ -59,5 +76,5 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Validation" version="2.2.8" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.5.0.77107" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.4.0.91020" targetFramework="xamarinios10" />
 </packages>
