--- a/XamarinIoTStandard/XamarinIoTStandard/XamarinIoTStandard.iOS/packages.config
+++ b/XamarinIoTStandard/XamarinIoTStandard/XamarinIoTStandard.iOS/packages.config
@@ -6,6 +6,7 @@
   <package id="DotNetty.Common" version="0.4.7" targetFramework="xamarinios10" />
   <package id="DotNetty.Handlers" version="0.4.7" targetFramework="xamarinios10" />
   <package id="DotNetty.Transport" version="0.4.7" targetFramework="xamarinios10" />
+  <package id="Microsoft.Azure.Amqp" version="2.1.2" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.Devices.Client" version="1.5.2" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.Devices.Shared" version="1.1.1" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="xamarinios10" />
@@ -50,6 +51,7 @@
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Security" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.WebSockets.Client" version="4.0.0" targetFramework="xamarinios10" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="xamarinios10" />
